revision that will most likely go out to SPS

--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -15,7 +15,7 @@
   <link rel="import" href="/components/omaha-app.html">
 
   <link rel="stylesheet" href="/css/styles.css">
-<link rel="shortcut icon" href="/components/favicon.ico" type="image/x-icon"/ >
+<link rel="Shortcut Icon" href="https://www.speechprivacysystems.com/wp-content/uploads/2016/03/sps-rings-150x150.jpg" type="image/x-icon">
 </head>
 
 <body unresolved style="height: 100%;">
