--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -474,7 +474,7 @@
           if(isNaN(this.value) || this.value == "" || this.value < -40 || this.value > 10) {
             console.log(this, this.name, this.value);
             checkInt++;
-            checkBands.push(this.name); // may have to put new string here
+            checkBands.push(this.name); // may have to put new string hereadjustSize
           }
         });
 
