--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -100,7 +100,7 @@
         <paper-radio-button id="targetButton"     name="target"     class="flex"><h3 style="margin-left: 10%">Target</h3></paper-radio-button>
         <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex"><h3 style="margin-left: 10%">Equalizers</h3></paper-radio-button>
         <paper-radio-button id="pagingButtonRC"   name="paging"     class="flex"><h3 style="margin-left: 10%">Paging</h3></paper-radio-button>
-        <paper-radio-button id="schedulingButton" name="scheduling" class="flex"><h3 style="margin-left: 10%">Scheduling</h3></paper-radio-button>
+        <paper-radio-button id="schedulingButton" name="scheduling" on-click="adjustSize" class="flex"><h3 style="margin-left: 10%">Scheduling</h3></paper-radio-button>
       </paper-radio-group>
     </div>
     <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
@@ -240,6 +240,10 @@
             }
           }
         }
+      },
+
+      adjustSize: function() {
+        adjustSize();
       },
 
       _speakerSelected: function() {
