--- a/software/src/omaha/templates/components/zones/zone-map-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-map-controller.html
@@ -421,7 +421,8 @@
           view: new ol.View({
             projection: projection,
             center: ol.extent.getCenter(extent),
-            zoom: 2
+            zoom: 6,
+            zoomFactor: 1.35
           })
         });
         
